Fixed findbugs issues.