@@ -198,7 +198,7 @@ public class OC4JInstantiatingIterator implements WizardDescriptor.Instantiating
         WizardDescriptor.Panel result = getPanels()[index];
         JComponent component = (JComponent)result.getComponent();
         component.putClientProperty("WizardPanel_contentData", getSteps());  // NOI18N
-        component.putClientProperty("WizardPanel_contentSelectedIndex", new Integer(getIndex()));// NOI18N
+        component.putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(getIndex()));// NOI18N
         return result;
     }
     
